[project]
name = "finance-tracker"
version = "0.1.0"
description = "This application will help users control their finances, analyze expenses and income, and plan a budget."
authors = [
    {name = "Stas",email = "stasfomcenko5@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "3.13.2"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
