[project]
name = "finance-tracker"
version = "0.1.0"
description = "This application will help users control their finances, analyze expenses and income, and plan a budget."
authors = [
    {name = "Stas",email = "stasfomcenko5@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "3.13.2"
dependencies = [
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "fastapi-users (>=14.0.1,<15.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "pydantic[emai] (>=2.10.6,<3.0.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "minio (>=7.2.15,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
